<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/sdondoIniziale"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/photo_1590487988256_9ed24133863e"
        android:importantForAccessibility="no" />

    <RelativeLayout
        android:id="@+id/whiteBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/white"
        android:backgroundTint="#7E000000"
        app:layout_constraintBottom_toTopOf="@+id/sdondoIniziale"
        app:layout_constraintEnd_toStartOf="@+id/sdondoIniziale"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027">

        <TextView
            android:id="@+id/titolo"
            android:layout_width="249dp"
            android:layout_height="78dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tabata1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="60sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="38dp" />

        <TextView
            android:id="@+id/nRound_txt"
            android:layout_width="214dp"
            android:layout_height="38dp"
            android:layout_below="@id/titolo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_background"
            android:backgroundTint="#771C1C1C"
            android:fontFamily="sans-serif"
            android:text="@string/round_di_lavoro"
            android:textAlignment="center"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="154dp" />

        <Spinner
            android:id="@+id/nRound_spinner"
            android:layout_width="214dp"
            android:layout_height="48dp"
            android:layout_below="@id/nRound_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="#43FFFFFF"
            android:entries="@array/rounds_array"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/DurataRound_txt"
            android:layout_width="214dp"
            android:layout_height="38dp"
            android:layout_below="@id/nRound_spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_background"
            android:backgroundTint="#771C1C1C"
            android:text="@string/durata_round"
            android:textAlignment="center"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="280dp" />


        <Spinner
            android:id="@+id/durataRound_spinner"
            android:layout_width="214dp"
            android:layout_height="48dp"
            android:layout_below="@id/DurataRound_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="#43FAFAFA"
            android:entries="@array/durata_arrays"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/durataRiposo_txt"
            android:layout_width="214dp"
            android:layout_height="38dp"
            android:layout_below="@id/durataRound_spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_background"
            android:backgroundTint="#771C1C1C"
            android:text="@string/durata_riposo"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#4CAF50"
            android:textSize="20sp"
            tools:ignore="MissingConstraints,TextSizeCheck"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="409dp" />

        <Spinner
            android:id="@+id/durataRiposo_Spinner"
            android:layout_width="214dp"
            android:layout_height="48dp"
            android:layout_below="@id/durataRiposo_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="#43FFFFFF"
            android:entries="@array/durata_arrays"
            android:textColor="#FFFFFF" />


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="218dp"
            android:layout_height="48dp"
            android:layout_below="@id/durataRiposo_Spinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:backgroundTint="#771C1C1C"
            android:buttonTint="#4CAF50"
            android:text="@string/timer_iniziale"
            android:textColor="#FBFBFB"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="507dp" />


        <Button
            android:id="@+id/btn_avviaTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:backgroundTint="#429746"
            android:fontFamily="sans-serif-black"
            android:text="@string/avvia_timer"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="605dp" />


        <TextView
            android:id="@+id/errori_txt"
            android:layout_width="301dp"
            android:layout_height="49dp"
            android:layout_below="@id/btn_avviaTimer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textColor="#BFBFBF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="662dp" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>